# rust_mediasearch

./: .env.example  Cargo.toml  README.md
src/: main.rs
