[package]
name = "medialookup"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
dialoguer = "0.11.0"
dotenv = "0.15.0"
urlencoding = "2.1.3"
termion = "4.0.2"
linebreak = "0.2.0"
colored = "2.1.0"
